# Linux_kernel-and-init

./: README  README.md
btrfs_version/: Cargo.toml  Makefile  kernel  rustfmt.toml  src
cdimage_version/: Makefile
common/: Cargo.toml  Makefile
common/kernel/: bzImage.config
common/src/: main.rs  set_ethernet.rs  sysdiag.rs
docker_version/: Dockerfile  Makefile
initrd_version/: Makefile
initrd_version/src/: main.rs  sysdiag.rs
other_examples/simple_cms/: Cargo.toml  Makefile  database.sql
other_examples/simple_cms-builtinfiles/: Cargo.toml  Makefile
other_examples/simple_cms-builtinfiles/src/: main.rs  models.rs
other_examples/simple_cms-mysqlonly/: Cargo.toml  Makefile
other_examples/simple_cms-mysqlonly/src/: main.rs
other_examples/simple_cms-templatedir/: Cargo.toml  Makefile  database.sql
other_examples/simple_cms-templatedir/src/: main.rs  models.rs  schema.rs
other_examples/simple_cms-templatedir/templates/: index.html
other_examples/simple_cms/src/: file_local.rs  file_sql.rs  file_static.rs  file_tcp.rs  main.rs  set_ethernet.rs  sysdiag.rs
other_examples/simple_cms/tcpfileserver/: Cargo.toml
other_examples/simple_cms/tcpfileserver/src/: main.rs
run_in_docker/: Makefile
run_on_btrfs/: Makefile
run_on_btrfs_ro_snapshot/: Makefile
run_on_cdimage/: Makefile
run_on_initrd/: Makefile
run_on_initrd_dynamic/: Dockerfile  Makefile
